--- a/index.html
+++ b/index.html
@@ -1078,6 +1078,8 @@
     @media (max-width: 600px) {
       /* Nav */
       nav { padding: 14px 20px; }
+      .logo { font-size: 1.1rem; }
+      .nav-pill { font-size: 0.68rem; padding: 5px 11px; }
       .bubble { display: none; }
 
       /* Hero */
@@ -1091,7 +1093,7 @@
       /* Tiers section */
       .mint-section { flex-direction: column; justify-content: flex-start; padding: 56px 20px 56px; gap: 20px; min-height: auto; }
       .mint-section::before { height: 80px; }
-      .mint-blend { height: 120px; }
+      .mint-blend { height: 200px; }
       .tiers-tagline { width: 100%; padding-right: 0; text-align: center; }
       .tiers-tagline-title { margin-right: 0; font-size: 1.4rem; margin-bottom: 12px; }
       .tiers-tagline p { text-align: center; font-size: 0.88rem; line-height: 1.6; margin-bottom: 10px; }
@@ -1111,7 +1113,7 @@
       .lb-blurb { text-align: center; font-size: 0.88rem; line-height: 1.6; }
 
       /* Leaderboard top/bottom blends */
-      .lb-top-blend { height: 60px; }
+      .lb-top-blend { height: 100px; }
       .lb-blend-default { height: 56px; }
 
       /* Podium */
@@ -1125,8 +1127,8 @@
       .lb-ravatar { width: 28px; height: 28px; }
 
       /* Footer */
-      footer { padding: 18px 20px; font-size: 0.76rem; }
-      .footer-links { gap: 16px; margin-bottom: 8px; }
+      footer { padding: 12px 20px; font-size: 0.72rem; }
+      .footer-links { gap: 14px; margin-bottom: 5px; }
     }
   </style>
 </head>
