your message here

--- a/index.html
+++ b/index.html
@@ -836,7 +836,7 @@
 
 /* LEADERBOARD SECTION */
     .lb-section {
-      background: #f2f0ef;
+      background: var(--teal-light);
       padding: 220px 48px 140px;
       display: flex;
       align-items: center;
@@ -1144,7 +1144,7 @@
   </nav>
 
   <main>
-    <h1>Split bills.<br>Not <span class="accent">friendships.</span></h1>
+    <h1>Every payback<br><span class="accent">counts</span></h1>
     <p class="sub">Pay fast. Earn back.</p>
 
     <div class="phone-wrap">
