--- a/privacy.html
+++ b/privacy.html
@@ -201,7 +201,7 @@
 <body>
 
   <nav>
-    <a href="home.html" class="logo">DIVVUM</a>
+    <a href="index.html" class="logo">DIVVUM</a>
 
     <div class="nav-pill">
       <div class="dot"></div>
