--- a/terms.html
+++ b/terms.html
@@ -14,7 +14,7 @@
       --teal-light: #d0f5ef;
       --navy: #0d1f1a;
       --gray: #6b7f7a;
-      --bg-primary: #f9fefe;
+      --bg-primary: white;
       --text-primary: var(--navy);
       --nav-bg: white;
     }
@@ -192,7 +192,7 @@
 <body>
 
   <nav>
-    <a href="home.html" class="logo">DIVVUM</a>
+    <a href="index.html" class="logo">DIVVUM</a>
 
     <div class="nav-pill">
       <div class="dot"></div>
