your message here

--- a/privacy.html
+++ b/privacy.html
@@ -196,6 +196,12 @@
       animation: pageExit 0.4s ease-in both;
       pointer-events: none;
     }
+
+    @media (max-width: 600px) {
+      nav { padding: 14px 20px; }
+      .logo { font-size: 1.1rem; }
+      .nav-pill { font-size: 0.68rem; padding: 5px 11px; }
+    }
   </style>
 </head>
 <body>
