your message here

--- a/privacy.html
+++ b/privacy.html
@@ -14,7 +14,7 @@
       --teal-light: #d0f5ef;
       --navy: #0d1f1a;
       --gray: #6b7f7a;
-      --bg-primary: #f9fefe;
+      --bg-primary: white;
       --text-primary: var(--navy);
       --nav-bg: white;
     }
