your message here

--- a/index.html
+++ b/index.html
@@ -10,9 +10,9 @@
     *, *::before, *::after { box-sizing: border-box; margin: 0; padding: 0; }
 
     :root {
-      --teal: #2ec4a9;
-      --teal-dark: #1fa08a;
-      --teal-light: #d0f5ef;
+      --teal: #1abc9c;
+      --teal-dark: #17a589;
+      --teal-light: #d1f2eb;
       --navy: #070f0d;
       --gray: #6b7f7a;
       --bg-primary: #f2f0ef;
@@ -105,10 +105,10 @@
       opacity: 1;
     }
     .mint-section.hover-basic {
-      background-color: #d0f5ef;
+      background-color: #d1f2eb;
     }
     .mint-section.hover-basic .tier-basic {
-      box-shadow: 0 12px 60px rgba(46,196,169,0.28), 0 0 0 1.5px rgba(46,196,169,0.35);
+      box-shadow: 0 12px 60px rgba(26,188,156,0.28), 0 0 0 1.5px rgba(26,188,156,0.35);
     }
     .mint-section.hover-gold {
       background-color: #fdf0c0;
@@ -298,7 +298,7 @@
       overflow: hidden;
     }
     .welcome-hero {
-      background: linear-gradient(to bottom, #c8f2ea 0%, #d0f5ef 75%, #ffffff 100%);
+      background: linear-gradient(to bottom, #c8f2ea 0%, #d1f2eb 75%, #ffffff 100%);
       padding: 48px 20px 48px;
       min-height: 260px;
       display: flex;
@@ -314,7 +314,7 @@
       width: 170px;
       height: 170px;
       border-radius: 50%;
-      background: rgba(46,196,169,0.18);
+      background: rgba(26,188,156,0.18);
       top: -40px;
       right: -40px;
       pointer-events: none;
@@ -349,7 +349,7 @@
       display: flex;
       align-items: center;
       justify-content: center;
-      box-shadow: 0 10px 28px rgba(46,196,169,0.45);
+      box-shadow: 0 10px 28px rgba(26,188,156,0.45);
       margin-bottom: 14px;
       position: relative;
       z-index: 1;
@@ -476,7 +476,7 @@
       font-size: 0.65rem; font-weight: 600; font-family: 'DM Sans', sans-serif;
     }
     .s-btn-sec {
-      background: #f2f0ef; border: 1.5px solid rgba(46,196,169,0.35);
+      background: #f2f0ef; border: 1.5px solid rgba(26,188,156,0.35);
       border-radius: 100px; padding: 9px 11px;
       font-size: 0.65rem; font-weight: 500; font-family: 'DM Sans', sans-serif; color: var(--navy);
     }
@@ -696,10 +696,10 @@
       font-size: 0.7rem;
       font-weight: 700;
       text-transform: uppercase;
-      border: 1.5px solid rgba(46,196,169,0.45);
+      border: 1.5px solid rgba(26,188,156,0.45);
       padding: 4px 14px;
       border-radius: 100px;
-      background: rgba(46,196,169,0.1);
+      background: rgba(26,188,156,0.1);
     }
     .tier-basic .tier-price { color: var(--navy); }
     .tier-btn-basic { background: var(--teal-light); color: var(--teal-dark); }
@@ -750,7 +750,7 @@
     .basic-entry-tag {
       font-size: 0.6rem;
       letter-spacing: 0.18em;
-      color: rgba(31,160,138,0.7);
+      color: rgba(23,165,137,0.7);
       text-align: center;
       margin-top: 18px;
       font-family: 'DM Sans', sans-serif;
@@ -860,7 +860,7 @@
       transition: opacity 0.5s ease;
     }
     .lb-top-default { background: linear-gradient(to bottom, #f2f0ef 0%, rgba(242,240,239,0) 100%); opacity: 1; }
-    .lb-top-basic   { background: linear-gradient(to bottom, #f2f0ef 0%, rgba(208,245,239,0) 100%); }
+    .lb-top-basic   { background: linear-gradient(to bottom, #f2f0ef 0%, rgba(209,242,235,0) 100%); }
     .lb-top-gold    { background: linear-gradient(to bottom, #f2f0ef 0%, rgba(253,240,192,0) 100%); }
     .lb-top-black   { background: linear-gradient(to bottom, #f2f0ef 0%, rgba(6,12,24,0) 100%); }
 
@@ -1048,7 +1048,7 @@
     .lb-rbar {
       flex: 1;
       height: 4px;
-      background: rgba(46,196,169,0.12);
+      background: rgba(26,188,156,0.12);
       border-radius: 100px;
       overflow: hidden;
       transition: background 0.5s ease;
@@ -1261,8 +1261,8 @@
             <li>Basic app theme</li>
           </ul>
           <div class="tier-dots">
-            <span class="tier-dot" style="background:#2ec4a9;"></span>
-            <span class="tier-dot" style="background:#d0f5ef;"></span>
+            <span class="tier-dot" style="background:#1abc9c;"></span>
+            <span class="tier-dot" style="background:#d1f2eb;"></span>
             <span class="tier-dot" style="background:#0d1f1a;"></span>
           </div>
           <div class="basic-entry-tag">· Entry Level · Standard ·</div>
