--- a/privacy.html
+++ b/privacy.html
@@ -9,9 +9,9 @@
     *, *::before, *::after { box-sizing: border-box; margin: 0; padding: 0; }
 
     :root {
-      --teal: #2ec4a9;
-      --teal-dark: #1fa08a;
-      --teal-light: #d0f5ef;
+      --teal: #1abc9c;
+      --teal-dark: #17a589;
+      --teal-light: #d1f2eb;
       --navy: #0d1f1a;
       --gray: #6b7f7a;
       --bg-primary: white;
