your message here

--- a/index.html
+++ b/index.html
@@ -1316,7 +1316,7 @@
       /* About section */
       .about-section { flex-direction: column; padding: 56px 28px 80px; gap: 32px; min-height: auto; }
       .about-section::before { height: 80px; }
-      .about-section::after { height: 260px; bottom: -40px; }
+      .about-section::after { height: 260px; }
       .about-graphic { width: 100%; order: 2; }
       .about-text { width: 100%; text-align: center; order: 1; }
       .about-text p { text-align: center; font-size: 0.85rem; line-height: 1.6; }
@@ -1325,7 +1325,7 @@
       /* Tiers section */
       .mint-section { flex-direction: column; justify-content: flex-start; padding: 56px 28px 56px; gap: 20px; min-height: auto; }
       .mint-section::before { height: 80px; }
-      .mint-blend { height: 200px; bottom: -40px; }
+      .mint-blend { height: 200px; }
       .tiers-tagline { width: 100%; padding-right: 0; text-align: center; }
       .tiers-tagline-title { margin-right: 0; font-size: 1.3rem; margin-bottom: 10px; }
       .tiers-tagline p { text-align: center; font-size: 0.85rem; line-height: 1.6; margin-bottom: 10px; }
@@ -1346,7 +1346,7 @@
 
       /* Leaderboard top/bottom blends */
       .lb-top-blend { height: 100px; }
-      .lb-blend-default { height: 56px; bottom: -40px; }
+      .lb-blend-default { height: 56px; }
 
       /* Podium */
       .lb-podium { gap: 10px; margin-bottom: 16px; }
