your message here

--- a/index.html
+++ b/index.html
@@ -1460,7 +1460,7 @@
         <div class="exp-icon">🍽️</div>
         <div class="exp-info">
           <div class="exp-name">Dinner at Rosso's</div>
-          <div class="exp-meta">4 people · Tonight</div>
+          <div class="exp-meta">4 people · 16h ago</div>
         </div>
         <div class="exp-amount">$84.00</div>
       </div>
@@ -1531,8 +1531,8 @@
     <!-- Text -->
     <div class="about-text tiers-tagline">
       <div class="tiers-tagline-title">How It<br>Works</div>
-      <p>Add any shared expense — dinner, rent, a weekend trip — and Divvum splits it instantly across your circle.</p>
-      <p>Everyone gets notified and pays their share. Your Divvum Score updates in real time, rewarding you every time you settle up on time.</p>
+      <p>Add an expense (e.g., dinner, tickets, or a bar tab), and Divvum will split it however you choose among your group members.</p>
+      <p>Everyone gets notified to pay their share, and those who settle up within 48 hours earn points toward Divvum tiers, unlocking exclusive rewards and financial perks.</p>
     </div>
 
   </section>
