your message here

--- a/index.html
+++ b/index.html
@@ -1531,8 +1531,8 @@
     <!-- Text -->
     <div class="about-text tiers-tagline">
       <div class="tiers-tagline-title">How It<br>Works</div>
-      <p>Add an expense (e.g., dinner, tickets, or a bar tab), and Divvum will split it however you choose among your group members.</p>
-      <p>Everyone gets notified to pay their share, and those who settle up within 48 hours earn points toward Divvum tiers, unlocking exclusive rewards and financial perks.</p>
+      <p>Paid for dinner? Covered the tab? Divvum will split the expense the way you like.</p>
+      <p>Those who pay before 48 hours earn points towards Divvum tiers, offering exclusive rewards and financial benefits.</p>
     </div>
 
   </section>
@@ -1542,8 +1542,9 @@
     <div class="mint-blend mint-blend-default"></div>
     <div class="tiers-tagline">
       <div class="tiers-tagline-title">Earned<br>Not Paid</div>
-      <p>Divvum Score shows how much your circle trusts you.</p>
+      <p>Divvum points shows how much your circle trusts you.</p>
       <p>Pay back quickly to rise faster — tiering up ensures fixed rates, increased score, and faster savings.</p>
+
     </div>
     <div class="tiers-inner">
       <div class="tiers-grid">
