your message here

--- a/index.html
+++ b/index.html
@@ -1532,8 +1532,8 @@
     <!-- Text -->
     <div class="about-text tiers-tagline">
       <div class="tiers-tagline-title">How It<br>Works</div>
-      <p>Paid for dinner? Covered the tab? Divvum will split the expense the way you like.</p>
-      <p>Those who pay before 48 hours earn points towards Divvum tiers, offering exclusive rewards and financial benefits.</p>
+      <p>Paid for dinner? Covered the tab? Won a bet? Divvum will split the expense for you.</p>
+      <p>Those who settle up before 48 hours earn Divvum points, our in app scoring metric that unclocks exclusive rewards and benefits.</p>
     </div>
 
   </section>
@@ -1544,7 +1544,7 @@
     <div class="tiers-tagline">
       <div class="tiers-tagline-title">Earned<br>Not Paid</div>
       <p>Divvum points shows how much your circle trusts you.</p>
-      <p>Pay back quickly to rise faster — tiering up ensures fixed rates, increased score, and faster savings.</p>
+      <p>Pay back on time or choose instant withdrawal to tier up, ensuring fixed rates, more reliabilty, and faster savings.</p>
 
     </div>
     <div class="tiers-inner">
